--- a/DH_BugTracker/DH_BugTracker.csproj
+++ b/DH_BugTracker/DH_BugTracker.csproj
@@ -195,7 +195,7 @@
     </Compile>
     <Compile Include="Helpers\EmailHelper.cs" />
     <Compile Include="Helpers\IdentityExtensions.cs" />
-    <Compile Include="Helpers\ImageUploadValidator.cs" />
+    <Compile Include="Helpers\UploadValidator.cs" />
     <Compile Include="Helpers\NotificationHelper.cs" />
     <Compile Include="Helpers\ProjectHelper.cs" />
     <Compile Include="Helpers\StringUtilities.cs" />
@@ -220,8 +220,9 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Avatars\aeris-rat_637089441622336569.jpg" />
     <Content Include="Avatars\default_user.jpg" />
-    <Content Include="Avatars\kasey-doggo_637085504126594568.jpeg" />
+    <Content Include="Avatars\kasey-doggo_637089443235270476.jpeg" />
     <Content Include="Content\animate.css" />
     <Content Include="Content\animsition.css" />
     <Content Include="Content\animsition.min.css" />
@@ -304,6 +305,7 @@
     <Content Include="Scripts\popper.min.js" />
     <Content Include="Scripts\select2.js" />
     <Content Include="Scripts\select2.min.js" />
+    <Content Include="Uploads\favicon_637087277192752932.ico" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -390,6 +392,8 @@
     <Content Include="Views\Manage\EditUser.cshtml" />
     <Content Include="Views\Admin\ManageProjects.cshtml" />
     <Content Include="Views\Project\ManageUsers.cshtml" />
+    <Content Include="Uploads\bugtracker-deliverables-week-2_637087236145985482.docx" />
+    <Content Include="Uploads\hardai-pseudo-code_637087275994053730.rtf" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
